remove addtional parameters models per new spec
